--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -125,7 +125,7 @@ MASKROM模式：不可分区烧录
 ## 工厂烧录
 
 ```
-5-DevelopmentTool开发工具/FactoryTool_v1.89.zip
+5-DevelopmentTool开发工具/FactoryTool 工厂镜像烧录工具/FactoryTool_v1.89.zip
 ```
 打开软件
 
