--- a/a133/zh/电池供电.md
+++ b/a133/zh/电池供电.md
@@ -1,3 +1,9 @@
 电池供电修改
 
-K5C 
+K5C type-c为电池充电
+
+![image-20250218143136388](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250218143136388.png)
+
+此处添加 0欧 电阻
+
+![image-20250218143226261](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250218143226261.png)
