--- a/a133/zh/33-电池供电.md
+++ b/a133/zh/33-电池供电.md
@@ -1,6 +1,6 @@
 # 电池供电修改
 
-K5C type-c为电池充电修改方法
+## K5C 修改type-c为电池充电
 
 ![image-20250218143136388](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250218143136388.png)
 
