--- a/a133/zh/33-电池供电.md
+++ b/a133/zh/33-电池供电.md
@@ -2,6 +2,10 @@
 
 ## K5C 修改type-c为电池充电
 
+
+
+apx707
+
 ![image-20250218143136388](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250218143136388.png)
 
 此处添加 0欧 电阻
