--- a/a133/zh/33-电池供电.md
+++ b/a133/zh/33-电池供电.md
@@ -11,3 +11,8 @@ apx707
 此处添加 0欧 电阻
 
 ![image-20250218143226261](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250218143226261.png)
+
+电池配置
+
+a133-android10.0-v2.0/longan/device/config/chips/a133/configs/c3/kickpi-k5c.dts
+
