--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -653,6 +653,14 @@ RGB888、YUV420、YUV422、YUV444
 
 ## 16. GPU
 
+**GPU使⽤率**
+
+```
+cat /sys/devices/platform/*gpu/utilisation
+```
+
+> 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
+
 ### Debian GLmark2性能测试
 
 RK Linux文件系统内置glmark2-es性能测试工具
