--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -656,7 +656,7 @@ RGB888、YUV420、YUV422、YUV444
 **GPU使⽤率**
 
 ```
-cat /sys/devices/platform/*gpu/utilisation
+$ cat /sys/devices/platform/*gpu/utilisation
 ```
 
 > 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
