--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -211,6 +211,9 @@ K4B 配备4路串口
 ```
 $ ls /dev/ttyS*
 ttyS1  ttyS3  ttyS4  ttyS5
+
+相关命令 串口初始化
+stty -F /dev/ttyS1 ispeed 115200 ospeed 115200 cs8
 ```
 
 > 串口设备节点说明：
