--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -16,7 +16,7 @@ sdk - 指代源码 ，具体名称见 SDK源码编译
 
 Android14.0的USB驱动 DriverAssitant 需要更新到V5.1.1版本，可以参考下面的工具章节进行更新。
 
->  RK3576平台windows固件烧写工具必须使用V3.28及以上版本
+RK3576平台windows固件烧写工具必须使用V3.28及以上版本
 
 Windows烧写工具：
 
