--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -36,13 +36,13 @@ Windows烧写工具：
 5-DevelopmentTool开发工具/USB Driver USB驱动/DriverAssitant_v5.13.zip
 ```
 
-将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹
+1. 将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹
 
-找到 DriverInstall.exe ，双击运行
+2. 找到 DriverInstall.exe ，双击运行
 
 ![image-20241025101533688](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101533688.png)
 
-点击驱动安装，提示安装成功
+3. 点击驱动安装，提示安装成功
 
 ![image-20241025101606583](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101606583.png)
 
