--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -144,11 +144,13 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 ### USB Type C
 
 Type-c 接口多功能
-	支持DP显示输出
-	支持HOST模式，U盘、鼠标等设备接入
-	支持DEVICE模式，adb/avc/uvc等功能
-	支持自动识别切换功能模式
-DP v1.4 显示输出功能
+支持DP显示输出
+支持HOST模式，U盘、鼠标等设备接入
+支持DEVICE模式，adb/avc/uvc等功能
+
+支持DP v1.4 显示输出功能
+
+支持自动识别切换功能模式
 
 
 
