--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -143,21 +143,17 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 支持HOST模式，U盘、鼠标等设备接入
 支持DEVICE模式，adb等功能
-支持DP v1.4 显示输出功能
-支持自动识别切换功能模式
+支持DP v1.4 显示输出模式
+支持自动识别切换模式
 
 ## HDMI TX 
 
-```
 支持HDMI TX 显示输出
 HDMI v2.1
 Supports up to 4K@120Hz
 Output data format: RGB/YUV444/YUV422/YUV420 8/10-bit
 Supports CEC (Consumer Electronic Control) and ARC (Audio Return Channel)
 HDCP v2.3 and HDCP v1.4
-```
-
-
 
 ## ADC
 
