--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -263,10 +263,8 @@ Period count:   min=2           max=32768
 
 ## RTC
 
-```
 板载 RTC hym8563
-支持接入RTC电池，掉电RTC IC使用电池保持工作
-```
+支持接入RTC电池，掉电RTC使用电池保持工作
 
 ### **硬件接线**
 
