--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -283,13 +283,13 @@ Period count:   min=2           max=32768
 打开风扇
 
 ```
-console:/ # echo 255 > /sys/class/leds/fan/brightness
+$ echo 255 > /sys/class/leds/fan/brightness
 ```
 
 关闭风扇
 
 ```
-console:/ # echo 255 > /sys/class/leds/fan/brightness
+$ echo 0 > /sys/class/leds/fan/brightness
 ```
 
 
