--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -396,13 +396,9 @@ $ candump can0 &
 
 ## PWM
 
-Extend 40Pin 接口 包含多路PWM
+Extend 40Pin 接口 包含多路PWM，
 
 pwmX_Ych_Z，X 表示控制器 id ，Y 表示当前控制器支持的通道总数，Z 表示通道 id 。
-
-
-
-
 
 列举相关pwm节点
 
