--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -388,7 +388,7 @@ $ candump can0 &
 
 ## PWM
 
-Extend 40Pin 接口 包含多路PWM，
+Extend 40Pin 接口 包含多路PWM，具体引脚见[扩展引脚章节](#ExpansionPin-K7)
 
 pwmX_Ych_Z，X 表示控制器 id ，Y 表示当前控制器支持的通道总数，Z 表示通道 id 。
 
