--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -412,7 +412,7 @@ $ cat /sys/class/pwm/pwmchip0/device/uevent | grep FULLNAME
 OF_FULLNAME=/pwm@27331000
 ```
 
->
+>表示 pwnchip0 对应位 PWM0 通道1
 >
 
 
