--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -415,9 +415,7 @@ OF_FULLNAME=/pwm@27331000
 >表示 pwnchip0 对应位 PWM0 通道1
 >
 
-
-
-* 配置PWM通道
+配置PWM通道
 
 示例：设置 PWM0_CH1 通道，周期10000ns，占空比5000ns，极性为normal
 
