--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -448,9 +448,7 @@ $ ls /dev/spi*
 $ spidev_test -D /dev/spidev4.0 -v -l -p "hello"
 ```
 
-> 主控做 Master 端
->
-> MISO、MOSI 进行短接
+> MISO、MOSI 进行硬件短接
 
 
 
