--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -450,9 +450,7 @@ $ spidev_test -D /dev/spidev4.0 -v -l -p "hello"
 
 > MISO、MOSI 进行硬件短接
 
-
-
-- 示例
+示例
 
 ```
 root@linaro-alip:/data# ./spidev_test -D /dev/spidev4.0 -v -l -p "hello"
@@ -472,7 +470,7 @@ ARM Mali G52 MC3
 OpenGL ES 1.1, 2.0 and 3.2, OpenCL 2.1, Vulkan 1.2
 ```
 
-**GPU使⽤率**
+**查看GPU使⽤率**
 
 ```
 cat /sys/devices/platform/*gpu/utilisation
