--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -476,6 +476,8 @@ OpenGL ES 1.1, 2.0 and 3.2, OpenCL 2.1, Vulkan 1.2
 cat /sys/devices/platform/*gpu/utilisation
 ```
 
+> 示例：实时查看使用率
+>
 > $ watch -n 1 'cat /sys/devices/platform/*gpu/utilisation'
 >
 > 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
