--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -504,7 +504,7 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 =======================================================
 ```
 
-> Debian12 ，接入mipi 800x1280 屏测试结果，测试分数为 337
+> glmark2测试分数为 337
 
 
 
