--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -606,20 +606,27 @@ AV1 Main10 L5.3: 4K 120fps
 
 **调试信息**
 
+开启调试信息
+
 ```
-打开
 $ export mpp_syslog_perror=1
 $ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
-关闭
+```
+
+>在调用硬件编解码会有类似信息
+
+[  893.134037] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1333 us hw 1312 us
+[  893.167444] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1381 us hw 1313 us
+[  893.200503] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1420 us hw 1313 us
+
+关闭调试信息
+
+```
 $ export mpp_syslog_perror=0
 $ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 ```
 
-> 在调用硬件编解码会有类似信息
->
-> [  893.134037] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1333 us hw 1312 us
-> [  893.167444] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1381 us hw 1313 us
-> [  893.200503] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1420 us hw 1313 us
+> 
 
 
 
