--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -613,7 +613,7 @@ $ export mpp_syslog_perror=1
 $ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 ```
 
->开启调试信息后，在调用硬件编解码会有类似信息
+>开启调试信息后，在调用硬件编解码会有类似如下日志信息
 > [  893.134037] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1333 us hw 1312 us
 > [  893.167444] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1381 us hw 1313 us
 > [  893.200503] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1420 us hw 1313 us
