--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -625,13 +625,9 @@ $ export mpp_syslog_perror=0
 $ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 ```
 
-> 
-
-
-
 **Debian / Ubuntu**
 
-Rockchip 提供了 MPP 相关 demo 进行使用
+Rockchip 提供了 MPP 相关工具进行使用
 
 **硬编码测试**
 
