--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -659,19 +659,17 @@ usage: mpi_enc_test [options]
  -sm      scene mode          scene_mode, 0:default 1:ipc 
 ```
 
-
-
 * 编码H.264 4096x2160 100帧测试
 
 ```
 $ mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 ```
 
+> 查看结果
+>
 > $ tail -f /var/log/syslog
 >
 > kickpi mpp[3557]: mpi_enc_test: chn 0 encode 100 frames time 3763 ms delay  27 ms fps 26.57 bps 10605252
-
-
 
 * 编码H.265 4096x2160 100帧测试
 
@@ -679,11 +677,11 @@ $ mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 $ mpi_enc_test -w 4096 -h 2160 -t 16777220 -o ./test.h265 -n 100
 ```
 
+> 查看结果
+>
 > $ tail -f /var/log/syslog
 >
 > kickpi mpp[3560]: mpi_enc_test: chn 0 encode 100 frames time 4086 ms delay  36 ms fps 24.47 bps 19594276
-
-
 
 **硬解码测试**
 
@@ -705,19 +703,17 @@ mpi_dec_test
  -bufmode buffer mode  hi - half internal (default) i -internal e - external
 ```
 
-
-
 * 解码H.264 4096x2160 100帧测试
 
 ```
 $ mpi_dec_test -t 7 -i test.h264 -n 100
 ```
 
+> 查看结果
+>
 > $ tail -f /var/log/syslog
 >
 > kickpi mpp[3564]: mpi_dec_test: decode 100 frames time 596 ms delay  25 ms fps 167.53
-
-
 
 * 解码H.265 4096x2160 100帧测试
 
@@ -725,6 +721,8 @@ $ mpi_dec_test -t 7 -i test.h264 -n 100
 $ mpi_dec_test -t 16777220 -i test.h265 -n 100
 ```
 
+> 查看结果
+>
 > $ tail -f /var/log/syslog
 >
 > kickpi mpp[3569]: mpi_dec_test: decode 100 frames time 803 ms delay  49 ms fps 124.47
