--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -38,7 +38,13 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 ## 备份SD卡系统
 
 > 注意：这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab
->
+
+##### FAQ
+
+如果是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
+```
+$ sudo systemctl disabled kickpi.service
+```
 
 接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
