--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -46,6 +46,8 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 $ sudo systemctl disable kickpi.service
 ```
 
+##### 操作步骤
+
 接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
 在板子上运行我们的打包脚本
@@ -60,7 +62,8 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 
 将这个镜像替换原本的out/h618-linux/rootfs.img
 
-如果需要对rootfs.img进行再进一步的修改，可以`sudo mount ./rootfs.img  /test_rootfs/` 挂载出 rootfs.img里面的内容
+> 如果需要对rootfs.img进行再进一步的修改，可以`sudo mount ./rootfs.img  /test_rootfs/` 挂载出 rootfs.img里面的内容
+>
 
 ### 全志-tina
 
