--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -60,12 +60,17 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 
 等待打包结束
 
-将这个镜像替换原本的out/h618-linux/rootfs.img
+如果需要对rootfs.img进行再进一步的修改，可以命令挂载出 rootfs.img里面的内容
 
-> 如果需要对rootfs.img进行再进一步的修改，可以`sudo mount ./rootfs.img  /test_rootfs/` 挂载出 rootfs.img里面的内容
->
+````
+sudo mount ./rootfs.img  ./test_rootfs/
+````
+
+
 
 ### 全志-tina
+
+将这个镜像替换原本的out/h618-linux/rootfs.img
 
 修改镜像打包分区
 
