--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -66,33 +66,7 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 sudo mount ./rootfs.img  ./test_rootfs/
 ````
 
-
-
-### 全志-tina
-
-将这个镜像替换原本的out/h618-linux/rootfs.img
-
-修改镜像打包分区
-
-```
-diff --git a/device/config/chips/h618/configs/p2/linux/sys_partition.fex b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
-index a5fa88c88..67fb67b5b 100755
---- a/device/config/chips/h618/configs/p2/linux/sys_partition.fex
-+++ b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
-@@ -53,7 +53,7 @@ size = 16384
-
- [partition]
-     name         = rootfs
--    size         = 8388608
-+    size         = 16777216  (修改到能容纳你rootfs.img的大小)
-     downloadfile = "rootfs.fex"
-     user_type    = 0x8000
-
-```
-
-然后`pack` 打包成固件烧录即可
-
-### AW-IMAGE
+##### AW-IMAGE 替换步骤
 
 AW-IMAGE SDK替换指定rootfs.img说明
 
@@ -123,11 +97,29 @@ $ vim scripts/debootstrap.sh
 
 ![aefb737ab69097882aedfad9c2fdb27](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/aefb737ab69097882aedfad9c2fdb27.png)
 
+##### 全志-tina替换步骤
 
+将这个镜像替换原本的out/h618-linux/rootfs.img
 
+修改镜像打包分区
 
+```
+diff --git a/device/config/chips/h618/configs/p2/linux/sys_partition.fex b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
+index a5fa88c88..67fb67b5b 100755
+--- a/device/config/chips/h618/configs/p2/linux/sys_partition.fex
++++ b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
+@@ -53,7 +53,7 @@ size = 16384
 
+ [partition]
+     name         = rootfs
+-    size         = 8388608
++    size         = 16777216  (修改到能容纳你rootfs.img的大小)
+     downloadfile = "rootfs.fex"
+     user_type    = 0x8000
 
+```
+
+然后`pack` 打包成固件烧录即可
 
 
 
