--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -37,14 +37,15 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
-> 注意：这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab
-
 ##### FAQ：
 
-出厂是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
+1.出厂是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
+
 ```
 $ sudo systemctl disable kickpi.service
 ```
+
+2.这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab 或者 rootfs
 
 ##### 操作步骤
 
@@ -60,10 +61,10 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 
 等待打包结束
 
-如果需要对rootfs.img进行再进一步的修改，可以命令挂载出 rootfs.img里面的内容
+如果需要对img进行再进一步的修改，可以命令挂载出img里面的内容
 
 ````
-sudo mount ./rootfs.img  ./test_rootfs/
+sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
 ````
 
 ##### AW-IMAGE 替换步骤
