--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -12,6 +12,10 @@
 
 ![image-20240319154848492](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319154848492.png)
 
+![image-20250222135232259](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250222135232259.png)
+
+带 * 号为软件默认配置功能
+
 ### K2C 20PIN引脚图
 
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
