--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -49,7 +49,7 @@ $ sudo systemctl disable kickpi.service
 
 ##### 操作步骤
 
-接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
+接好U盘，大小至少16GB以上，打包出来的镜像会比较大
 
 在板子上运行我们的打包脚本
 
