--- a/a133/zh/33-电池供电.md
+++ b/a133/zh/33-电池供电.md
@@ -105,5 +105,10 @@ battery_power_supply: battery-power-supply {
 
 ## 调试信息
 
+```
+$ echo 8 > /proc/sys/kernel/printk
+$ echo 0xf > /sys/class/axp/debug_mask
+```
+
 
 
