--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -207,30 +207,37 @@ Android支持adb调试（type-c接口连接主机）
 
   * adb的主要命令如下：
 
-  	#####**adb devices**
-  	 - 说明：查看当前连接的设备， 连接到计算机的设备或者模拟器将会列出显示
-  	 - adb start-server
-  	 - 说明：启动adb
-  	
-  	#####adb kill-server
-  	 - 说明：关闭adb
-  	
-  	#####adb shell
-  	  - 说明：这个命令将登录设备的shell, 后面加直接运行设备命令， 相当于执行远程命令
-  	
-  	#####adb push
-  	  - 说明：此命令可以把电脑上的文件复制到开发板上
-  	  - 举例： adb push hello.c /tmp/ 这样就把电脑上的hello.c文件复制到了开发板上的/tmp目录下
-  	
-  	#####adb pull
-  	  -	说明：此命令可以把开发板上的文件复制到电脑上
-  	  - 举例： adb pull /tmp/hello.c ./ 将开发板上/tmp目录下的文件hello.c复制到当前目录
-  	
-  	#####adb version
-  	  - 说明：查看adb的版本
-  	
-  	#####adb help
-  	  - 说明：adb的帮助，有关更多命令详情，请使用adb help命令查看
+##### adb devices
+
+- Description: To view the currently connected devices, the devices connected to the computer or the emulator will be listed and displayed
+- adb start-server
+- Description: Start adb
+
+#### adb kill-server
+
+- Description: Close adb
+
+#### adb shell
+
+- Description: This command will log into the shell of the device, followed by the command to run the device directly, which is equivalent to executing a remote command
+
+#### adb push
+
+- Description: This command can copy files from the computer to the development board
+  -Example: adb push hello.c /tmp/This copies the hello.c file on the computer to the/tmp directory on the development board
+
+#### adb pull
+
+- Description: This command can copy the files on the development board to the computer
+- Example: adb pull /tmp/hello.c./Copy the file hello.c in the/tmp directory on the development board to the current directory
+
+#### adb version
+
+- Description: Check the version of adb
+
+#### adb help
+
+- Description: adb help, for more command details, please use the adb help command to view
 
 
 
