--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -46,8 +46,8 @@
 
   ![image-20250226113656533](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250226113656533.png)
 
-  ​	第一次连wifi时会产生的keyring，这时Keyring的密码设置为空，才会避免以后的问题。
-  ​	已经出现可以手动删除目录中的密钥环文件。`~/.local/share/keyrings`
+  ​	原因：第一次连wifi时会产生的keyring，这时Keyring的密码设置为空，才会避免以后的问题。
+  ​	解决办法：已经出现可以手动删除目录中的密钥环文件。`~/.local/share/keyrings`
 
 
 
