--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -455,3 +455,14 @@ nameserver 8.8.8.8
 nameserver 8.8.4.4
 ```
 
+
+
+## 11TVOUT功能
+
+在图示位置加焊0欧电阻可将3.5mm接口的音频信号修改为TV信号，可搭配3.5mm转AV线使用
+
+![image-20250226150544995](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250226150544995.png)
+
+![image-20250226151218754](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250226151218754.png)
+
+​													3.5mm转AV公头
