--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1311,7 +1311,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 
 
-## 30、KEY测试
+## 30、KEY测试<a id="KEY test"></a>
 
 * Android测试使用命令getevent:
 
