--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -106,9 +106,7 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 ### sys gpio控制
 
-当存在将拓展引脚配置为输入的需求，默认软件的gpio-led不能满足需求。
-
-将GPIO释放出来，通过 /sys/class/gpio 进行控制
+当GPIO没有任何使用时，通过 /sys/class/gpio 进行控制
 
 **PIN 脚计算**
 
