--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -106,7 +106,7 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 ### sys gpio控制
 
-当GPIO没有任何使用时，通过 /sys/class/gpio 进行控制
+当GPIO没有任何使用时，可以通过 /sys/class/gpio 进行控制
 
 **PIN 脚计算**
 
@@ -118,29 +118,13 @@ A（0-7）B（8-15）C（16-23）D（24-31）
 GPIO1-D0  计算 Pin num = 32 * 1 + 24 = 56
 ```
 
+**步骤一 确保GPIO没有任何使用**
 
+先将对应GPIO引脚注释，`/sys/class/gpio/export` 只能导入未注册的 gpio，将设备树对应IO取消使能
 
-**步骤一**
+**步骤二 编译镜像，重新烧录**
 
-先将对应GPIO引脚注释，`/sys/class/gpio/export` 只能导入未注册的 gpio
-
-将设备树对应IO取消使能
-
-设备树位于：
-
-```
-kernel-5.10/arch/arm64/boot/dts/rockchip/
-40pin:	rk3568-kickpi-extend-40pin.dtsi
-20pin:	rk3568-kickpi-extend-20pin.dtsi
-```
-
-**步骤二**
-
-​		编译镜像，重新烧录
-
-**步骤三**
-
-​		确认gpio未被注册
+**步骤三 确认gpio未被注册**
 
 ```
 cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
@@ -148,9 +132,9 @@ cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 > 未注册如下：pin 56 (gpio1-24): (MUX UNCLAIMED) (GPIO UNCLAIMED)
 
-**步骤四**
+**步骤四 对IO口进行控制**
 
-​		通过 /sys/class/gpio/export 注册 56并进行控制
+通过 /sys/class/gpio/export 注册 56并进行控制
 
 ```
 // 注册
@@ -164,7 +148,7 @@ active_low  device  direction  edge  power  subsystem  uevent  value
 root@kickpi:~#
 ```
 
-​			通过结点下的内容控制 gpio , 常用如下
+通过结点下的内容控制 gpio , 常用如下
 
 ```
 direction
