--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -26,6 +26,12 @@
 UART0_RX /TX 默认配置串口调试
 TWI即I2C：TWI1_SCK/TWI1_SDA 等同 I2C_CLK/I2C_SDA
 
+### 系统上电
+
+K2B可以使用type-c直接供电 也可使用5V跳线接入20Pin扩展引脚中的1号管脚供电，地可接管脚6
+
+![image-20250228181043029](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250228181043029.png)
+
 ## 2. GPIO
 
 K2B开发板的扩展20Pin引脚中最多支持12路GPIO。
