--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -72,7 +72,9 @@ $ cat /sys/class/leds/sys_led/brightness
 
 
 
-## 3. 调试串口
+## 3. 串口
+
+## 调试串口
 
 **开发板调试串口接线**
 
@@ -101,6 +103,22 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 ![image-20240319182217644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319182217644.png)
+
+
+
+## TTL普通串口
+
+使用串口工具连接
+
+![image-20250303101855877](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250303101855877.png)
+
+``` shell
+stty -F /dev/ttyAS5 ispeed 115200 ospeed 115200 cs8 // ttyAS5为串口5 对应管脚PH2 PH3 115200是波特率
+```
+
+
+
+![image-20250303101248547](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250303101248547.png)
 
 
 
