--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -117,7 +117,7 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 
-## 4. 单触摸屏驱动配置
+## 4. 单触摸屏驱动配置<a id='TouchDriver'></a>
 
 > 以GT9XX为例
 
