--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -217,18 +217,34 @@ PhoenixCard.rar 直接解压后打开即可，打开界面如下
 
 ### 烧录镜像
 
+量产卡和启动卡的区别
+
+量产卡会自动将SD卡里的系统镜像烧录进入emmc中，无法直接启动
+
+启动卡会从SD卡中启动系统，能够直接启动系统
+
+#### 启动卡烧录
+
 1. 插入SD卡到电脑
 2. 按照以下步骤操作烧录工具
 
 ![image-20240718145612214](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240718145612214.png)
 
-
-
-### 启动Android系统
-
 插入烧录好的SD卡到开发板，上电启动即可自动
 
+#### 量产卡烧录
 
+1.选择镜像
+
+2.选择量产卡
+
+3.烧卡
+
+![image-20250303140114424](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250303140114424.png)
+
+插入烧录好的SD量产卡到开发板，上电启动即可自动开启烧录
+
+K2B安卓系统，使用SD量产卡烧录完成后系统电源灯会熄灭。
 
 ## 3. Ubuntu镜像烧录
 
