--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -51,7 +51,14 @@ $ sudo systemctl disable kickpi.service
 
 接好U盘，大小至少16GB以上，打包出来的镜像会比较大
 
-在板子上运行我们的打包脚本
+1.U盘挂载出来：
+
+```
+$ mkdir -p /mnt/usb
+$ sudo mount /dev/sda1 /mnt/usb
+```
+
+2.在板子上运行我们的打包脚本
 
 ```
 sudo ./ff_export_rootfs /mnt/usb/ -t ext4
@@ -59,9 +66,9 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 
 > 生成的包名格式如：Ubuntu22.04.5LTS_ztl_ext4_202411131114.img
 
-等待打包结束
+等待打包结束，时间较长
 
-如果需要对img进行再进一步的修改，可以命令挂载出img里面的内容
+> 如果需要对img进行再进一步的修改，可以命令挂载出img里面的内容
 
 ````
 sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
