--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -54,7 +54,7 @@ $ sudo systemctl disable kickpi.service
 1.U盘挂载出来：
 
 ```
-$ mkdir -p /mnt/usb
+$ sudo mkdir -p /mnt/usb
 $ sudo mount /dev/sda1 /mnt/usb
 ```
 
@@ -68,10 +68,11 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 
 等待打包结束，时间较长
 
-> 如果需要对img进行再进一步的修改，可以命令挂载出img里面的内容
+> 如果需要对img进行再进一步的修改，可以通过下面方式 在虚拟机中挂载出img里面的内容
 
 ````
-sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
+$ sudo mkdir test_rootfs/
+$ sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
 ````
 
 ##### AW-IMAGE 替换步骤
