--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -41,7 +41,7 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 1.出厂是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
 
-```
+```shell
 $ sudo systemctl disable kickpi.service
 ```
 
@@ -53,15 +53,15 @@ $ sudo systemctl disable kickpi.service
 
 1.U盘挂载出来：
 
-```
+```shell
 $ sudo mkdir -p /mnt/usb
 $ sudo mount /dev/sda1 /mnt/usb
 ```
 
 2.在板子上运行我们的打包脚本
 
-```
-sudo ./ff_export_rootfs /mnt/usb/ -t ext4
+```shell
+$ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 ```
 
 > 生成的包名格式如：Ubuntu22.04.5LTS_ztl_ext4_202411131114.img
@@ -70,7 +70,7 @@ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 
 > 如果需要对img进行再进一步的修改，可以通过下面方式 在虚拟机中挂载出img里面的内容
 
-````
+````shell
 $ sudo mkdir test_rootfs/
 $ sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
 ````
