--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -108,11 +108,11 @@ $ vim scripts/debootstrap.sh
 
 ##### 全志-tina替换步骤
 
-将这个镜像替换原本的out/h618-linux/rootfs.img
+将这个镜像替换原本的rootfs镜像：out/h618-linux/rootfs.img
 
 修改镜像打包分区
 
-```
+```diff
 diff --git a/device/config/chips/h618/configs/p2/linux/sys_partition.fex b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
 index a5fa88c88..67fb67b5b 100755
 --- a/device/config/chips/h618/configs/p2/linux/sys_partition.fex
