--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -58,7 +58,13 @@ $ sudo mkdir -p /mnt/usb
 $ sudo mount /dev/sda1 /mnt/usb
 ```
 
-2.在板子上运行我们的打包脚本
+2.脚本所在网盘路径：
+
+```
+h618_data\3-SoftwareData软件资料\Linux打包rootfs脚本
+```
+
+3.在板子上运行我们的打包脚本
 
 ```shell
 $ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
