--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -61,7 +61,7 @@ $ sudo mount /dev/sda1 /mnt/usb
 2.脚本所在网盘路径：
 
 ```
-h618_data\3-SoftwareData软件资料\Linux打包rootfs脚本
+h618_data\3-SoftwareData软件资料\Linux打包rootfs脚本\ff_export_rootfs
 ```
 
 3.在板子上运行我们的打包脚本
