--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -81,7 +81,7 @@ $ sudo mkdir test_rootfs/
 $ sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
 ````
 
-##### AW-IMAGE 替换步骤
+##### AW-IMAGE SDK替换步骤
 
 AW-IMAGE SDK替换指定rootfs.img说明
 
@@ -112,7 +112,7 @@ $ vim scripts/debootstrap.sh
 
 ![aefb737ab69097882aedfad9c2fdb27](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/aefb737ab69097882aedfad9c2fdb27.png)
 
-##### 全志-tina替换步骤
+##### 全志-tina SDK替换步骤
 
 将这个镜像替换原本的rootfs镜像：out/h618-linux/rootfs.img
 
