--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -37,7 +37,7 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
-##### FAQ：
+### FAQ：
 
 1.出厂是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
 
@@ -47,7 +47,7 @@ $ sudo systemctl disable kickpi.service
 
 2.这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab 或者在替换前删除此文件
 
-##### 操作步骤
+### 操作步骤
 
 接好U盘，大小至少16GB以上，打包出来的镜像会比较大
 
@@ -81,7 +81,7 @@ $ sudo mkdir test_rootfs/
 $ sudo mount ./Ubuntu22.04.5LTS_ztl_ext4_202411131114.img  ./test_rootfs/
 ````
 
-##### AW-IMAGE SDK替换步骤
+### AW-IMAGE SDK替换步骤
 
 AW-IMAGE SDK替换指定rootfs.img说明
 
@@ -112,7 +112,7 @@ $ vim scripts/debootstrap.sh
 
 ![aefb737ab69097882aedfad9c2fdb27](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/aefb737ab69097882aedfad9c2fdb27.png)
 
-##### 全志-tina SDK替换步骤
+### 全志-tina SDK替换步骤
 
 将这个镜像替换原本的rootfs镜像：out/h618-linux/rootfs.img
 
