--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -39,32 +39,32 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ### FAQ：
 
-1.出厂是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
+* 出厂是SD卡自动烧录的系统 ，拷贝出来的系统也是SD卡自动烧录的，想要取消自动烧录可以使用下面命令，关闭烧录服务
 
 ```shell
 $ sudo systemctl disable kickpi.service
 ```
 
-2.这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab 或者在替换前删除此文件
+* 这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab 或者在替换前删除此文件
 
 ### 操作步骤
 
 接好U盘，大小至少16GB以上，打包出来的镜像会比较大
 
-1.U盘挂载出来：
+* U盘挂载出来：
 
 ```shell
 $ sudo mkdir -p /mnt/usb
 $ sudo mount /dev/sda1 /mnt/usb
 ```
 
-2.脚本所在网盘路径：
+* 脚本所在网盘路径：
 
 ```
 h618_data\3-SoftwareData软件资料\Linux打包rootfs脚本\ff_export_rootfs
 ```
 
-3.在板子上运行我们的打包脚本
+* 在板子上运行我们的打包脚本
 
 ```shell
 $ sudo ./ff_export_rootfs /mnt/usb/ -t ext4
