--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -45,7 +45,7 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //android
 #include "rk3568-kickpi-lcd-hdmi.dtsi"
 //#include "rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi"
 //#include "rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi"
-#include "rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi"
+//#include "rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi"
 //#include "rk3568-kickpi-lcd-lvds-7-1024-600.dtsi"
 ```
 
