--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -49,6 +49,8 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //android
 //#include "rk3568-kickpi-lcd-lvds-7-1024-600.dtsi"
 ```
 
+> 其中的rk3568-kickpi-lcd-hdmi.dtsi需要默认保持使能
+>
 > 若显示屏调试有问题，可联系售后，获取技术支持
 
 
