--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -138,7 +138,33 @@ index a5fa88c88..67fb67b5b 100755
 
 
 
-## 定制系统功能
+## 拷贝eMMC系统到新SD卡（系统备份）
+
+准备一张高速SD卡 建议class10的，SD卡性能会影响系统备份时间
+
+将SD卡插入卡槽
+
+lsblk
+
+![image-20250304192434948](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250304192434948.png)
+
+格式化SD卡
+
+``` shell
+mkfs.ext4 /dev/mmcblk1
+```
+
+![image-20250304192605788](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250304192605788.png)
+
+``` shell
+dd if=/dev/mmcblk0  of=/dev/mmcblk1  bs=4M
+```
+
+开始拷贝，需耐心等待，根据SD卡性能大概需要10~25分钟。
+
+![image-20250304192922929](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250304192922929.png)
+
+拷贝完成
 
 
 
