--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -164,6 +164,8 @@ dd if=/dev/mmcblk0  of=/dev/mmcblk1  bs=4M
 
 ![image-20250304192922929](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250304192922929.png)
 
+请耐心等待拷贝完成
+
 拷贝完成即可。
 
 
