--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -166,7 +166,9 @@ dd if=/dev/mmcblk0  of=/dev/mmcblk1  bs=4M
 
 请耐心等待拷贝完成
 
-拷贝完成即可。
+![image-20250304195232800](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250304195232800.png)
+
+拷贝完成
 
 
 
