--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -172,6 +172,20 @@ dd if=/dev/mmcblk0  of=/dev/mmcblk1  bs=4M
 
 
 
+## 将系统拷贝生成.img镜像
+
+插入U盘
+
+挂载U盘目录
+
+``` shell
+mount /dev/sda1 /mnt/sda/
+```
+
+``` shell
+dd if=/dev/mmcblk0 of=/mnt/sda/test.img bs=4M
+```
+
 
 
 
