--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -18,6 +18,8 @@ sudo passwd root
 
 串口：/lib/systemd/system/serial-getty@.service.d/override.conf
 
+![image-20250305115657169](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305115657169.png)
+
 界面：/lib/systemd/system/getty@.service.d/override.conf
 
 ![image-20241105154155771](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105154155771.png)
