--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -67,6 +67,10 @@ aplay -Dhw:audiocodec  -vv test.wav
 
 ## WIFI
 
+相关参考
+
+[wpa_supplicant、wpa_cli的使用](https://blog.csdn.net/bulebin/article/details/85253631)
+
 ```shell
 修改wifi名和密码
 # vi /etc/wpa_supplicant.conf
