--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -16,14 +16,30 @@ sudo passwd root
 
 ## Linux换默认登录用户
 
-串口：/lib/systemd/system/serial-getty@.service.d/override.conf
+串口登录：/lib/systemd/system/serial-getty@.service.d/override.conf
 
 ![image-20250305115657169](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305115657169.png)
 
-界面：/lib/systemd/system/getty@.service.d/override.conf
+## 桌面环境修改为ROOT登录
 
-![image-20241105154155771](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105154155771.png)
+修改/etc/lightdm/lightdm.conf.d/22-autologin.conf
 
+``` shell
+[Seat:*]
+autologin-user=root  //修改为root
+autologin-user-timeout=0
+user-session=xfce
+
+```
+
+修改/etc/lightdm/users.conf
+
+``` shell
+[UserList]
+minimum-uid=0 # 允许UID=0（即root）登录
+hidden-users=nobody nobody4 noaccess
+hidden-shells=/bin/false /usr/sbin/nologin /sbin/nologin
+```
 
 
 
