--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -8,9 +8,11 @@ Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 
 下载QT源码
 
-安装QT
+## 安装QT
 
+打开
 
+![image-20250305160406754](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160406754.png)
 
 ![image-20250305154700903](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154700903.png)
 
@@ -23,3 +25,23 @@ Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 ![image-20250305154947584](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305154947584.png)
 
 ![image-20250305155351891](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155351891.png)
+
+![image-20250305155413384](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155413384.png)
+
+![image-20250305155506960](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155506960.png)
+
+## 配置环境变量
+
+![image-20250305155737717](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155737717.png)
+
+![image-20250305155931861](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155931861.png)
+
+![image-20250305160102538](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160102538.png)
+
+## 安装关联
+
+打开
+
+![image-20250305160346146](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160346146.png)
+
+![image-20250305160301502](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160301502.png)
