--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -45,3 +45,35 @@ Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 ![image-20250305160346146](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160346146.png)
 
 ![image-20250305160301502](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160301502.png)
+
+完成后打开系统powershell
+
+``` cmd
+state checkout ActiveState-Projects/ActiveState-Perl-5.36.0 .
+```
+
+![image-20250305160827905](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160827905.png)
+
+![image-20250305160921652](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160921652.png)
+
+``` cmd
+state use ActiveState-Perl-5.36.0
+```
+
+![image-20250305161126514](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161126514.png)
+
+设置环境变量
+
+![image-20250305161401099](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161401099.png)
+
+## 安装python
+
+![image-20250305161451095](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161451095.png)
+
+![image-20250305161534791](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161534791.png)
+
+![image-20250305161614854](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161614854.png)
+
+添加环境变量
+
+![image-20250305161959830](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161959830.png)
