--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -77,3 +77,7 @@ state use ActiveState-Perl-5.36.0
 添加环境变量
 
 ![image-20250305162422819](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305162422819.png)
+
+检查
+
+![image-20250305162520633](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305162520633.png)
