--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -81,3 +81,11 @@ state use ActiveState-Perl-5.36.0
 检查
 
 ![image-20250305162520633](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305162520633.png)
+
+解压编译工具链并添加环境变量
+
+![image-20250305162811689](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305162811689.png)
+
+解压过后的名字比较长，编译可能出问题，将这个文件夹名字改成aarch64-linux-gnu
+
+![image-20250305163713729](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305163713729.png)
