--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -88,4 +88,9 @@ state use ActiveState-Perl-5.36.0
 
 解压过后的名字比较长，编译可能出问题，将这个文件夹名字改成aarch64-linux-gnu
 
-![image-20250305163713729](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305163713729.png)
+![image-20250305164104564](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305164104564.png)
+
+解压QT源码
+
+
+
