--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -90,6 +90,7 @@ state use ActiveState-Perl-5.36.0
 
 ![image-20250305164104564](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305164104564.png)
 
-编译QT源码
+## 编译QT源码
 
 ![image-20250305185044779](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305185044779.png)
+
