--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -92,6 +92,27 @@ state use ActiveState-Perl-5.36.0
 
 ## 编译QT源码
 
+解压Qt源码
+
+![image-20250305192953074](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305192953074.png)
+
+1. 在Windows搜索MinGW，打开如下图所示的窗口（注意看版本，别选错了），*\*注意，一定要用这个工具打开，不能用PowerShell\**
+
 ![image-20250305185044779](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305185044779.png)
 
 ![image-20250305191930110](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305191930110.png)
+
+切换到Qt源码目录下
+
+如果源码和5.12.10(MinGW 7.3.0 64-bit)运行时不在同一盘符下
+
+则如图D:切换下，
+
+![image-20250305192832092](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305192832092.png)
+
+执行下面的语句，注意蓝色字体部分为安装路径，根据命令行提示，输入y完成配置
+
+``` cmd
+./configure.bat -release -opensource -prefix D:\Qt\CrossCompilation\Qt5.12.10-ARMv8 -nomake tests -nomake examples -no-opengl -skip qtvirtualkeyboard -platform win32-g++ -xplatform linux-aarch64-gnu-g++
+```
+
