--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -114,5 +114,23 @@ state use ActiveState-Perl-5.36.0
 
 ``` cmd
 ./configure.bat -release -opensource -prefix D:\Qt\CrossCompilation\Qt5.12.10-ARMv8 -nomake tests -nomake examples -no-opengl -skip qtvirtualkeyboard -platform win32-g++ -xplatform linux-aarch64-gnu-g++
+
+-prefix 后面的参数为安装路径
 ```
+
+1. 编译
+
+根据硬件情况选择编译的核心数，比如8核心16线程（预计一小时左右），则建议
+
+mingw32-make -j14
+
+尽量比线程数少1-2，否则电脑可能过于卡顿，编译时间较长，核心数越多编译越快，只要编译过程没有跳出error并中断编译就说明编译通过
+
+
+
+
+
+
+
+
 
