--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -118,19 +118,27 @@ state use ActiveState-Perl-5.36.0
 -prefix 后面的参数为安装路径
 ```
 
-1. 编译
+![image-20250305193934069](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305193934069.png)
+
+![image-20250305194131228](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305194131228.png)
+
+根据命令行提示，输入y完成配置
 
 根据硬件情况选择编译的核心数，比如8核心16线程（预计一小时左右），则建议
 
-mingw32-make -j14
+mingw32-make -j10
+
+![image-20250305194249489](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305194249489.png)
 
 尽量比线程数少1-2，否则电脑可能过于卡顿，编译时间较长，核心数越多编译越快，只要编译过程没有跳出error并中断编译就说明编译通过
 
+![image-20250306091059865](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306091059865.png)
 
+``` 
+mingw32-make install
+```
 
-
-
-
+![image-20250306091941590](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306091941590.png)
 
 
 
