--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -140,5 +140,25 @@ mingw32-make install
 
 ![image-20250306091941590](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306091941590.png)
 
+## 配置QT Creator
 
+![image-20250306092046919](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306092046919.png)
 
+1. 打开QT Creator，打开“工具->选项->Kits”
+2. 在“QT Version”栏点击添加，选择上方QT安装目录下的bin目录下的qmake.exe，点击右下角apply
+
+![image-20250306092221235](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306092221235.png)
+
+![image-20250306092448631](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306092448631.png)
+
+1. 配置编译器Compilers
+
+右侧选择“添加->GCC->C++”，编译器路径即为gnu工具中的C++编译器aarch64-linux-gnu-g++所在路径，名称建议与我截图aarch64-linux-gnu-g++保持一致，ABI使用默认即可
+
+右侧选择“添加->GCC->C”，编译器路径即为gnu工具中的C编译器aarch64-linux-gnu-gcc所在路径，名称建议与我截图aarch64-linux-gnu-gcc保持一致，ABI使用默认即可
+
+![image-20250306093823225](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306093823225.png)
+
+![image-20250306093727297](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306093727297.png)
+
+与我截图保持一致，点击右下角apply
