--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -57,5 +57,10 @@
 
 ### 启动卡在logo界面
 
-* 固件是否是
+* 固件是否是为提供的固件，确保使用网盘提供的固件，技术支持才能帮助排查问题。
+* 重启多次，是否每次都这样
+* 如果是使用的Ubuntu系统有时启动会比较慢，需耐心等待一会，观察是否后续正常进入图形化界面
+* 上述确定完，依旧卡在logo界面，如下排查
+* 确认蓝色系统运行灯是否闪烁
+* 接调试串口，保持所有打印的开机日志，方便提供给技术支持帮助排查问题
 
