--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -168,3 +168,31 @@ mingw32-make install
 在“Debuggers”点击右边Add添加，选择gnu工具下的aarch64-linux\bin路径下的aarch64-linux-gnu-gdb.exe，Name修改为aarch64-linux-gnu-gdb，点击右下角apply
 
 ![image-20250306094016745](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306094016745.png)
+
+1. 配置CMake
+
+在“CMake”栏点击Add添加，选择步骤一中安装的QT的目录，找到安装目录下Tools\mingw730_64\bin\mingw32-make.exe，参考下图，修改Name为MinGW，点击右下角apply
+
+![image-20250306094550417](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306094550417.png)
+
+1. 添加[Arm64](https://so.csdn.net/so/search?q=Arm64&spm=1001.2101.3001.7020)的编译环境（构建套件Kits）
+
+在“Kits”栏点击添加，所有需要操作的部分参考下图红圈部分
+
+![image-20250306094936335](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306094936335.png)
+
+## 案例测试
+
+![image-20250306095105641](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095105641.png)
+
+![image-20250306095230390](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095230390.png)
+
+![image-20250306095351963](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095351963.png)
+
+![image-20250306095417246](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095417246.png)
+
+![image-20250306095449959](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095449959.png)
+
+![image-20250306095538732](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095538732.png)
+
+![image-20250306095718648](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095718648.png)
