--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -196,3 +196,5 @@ mingw32-make install
 ![image-20250306095538732](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095538732.png)
 
 ![image-20250306095718648](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095718648.png)
+
+![image-20250306095752717](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095752717.png)
