--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -30,6 +30,10 @@ Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 
 ![image-20250305155506960](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155506960.png)
 
+在安装目录下Qt5.12.10\Tools\mingw730_64\bin里复制一份mingw32-make.exe并重命名为make.exe
+
+![image-20250306134109785](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306134109785.png)
+
 ## 配置环境变量
 
 ![image-20250305155737717](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305155737717.png)
