--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -175,9 +175,9 @@ mingw32-make install
 
 1. 配置CMake
 
-在“CMake”栏点击Add添加，选择步骤一中安装的QT的目录，找到安装目录下Tools\mingw730_64\bin\mingw32-make.exe，参考下图，修改Name为MinGW，点击右下角apply
+在“CMake”栏点击Add添加，选择步骤一中安装的QT的目录，找到安装目录下Tools\mingw730_64\bin\make.exe，参考下图，修改Name为MinGW，点击右下角apply
 
-![image-20250306094550417](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306094550417.png)
+![image-20250306135029163](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135029163.png)
 
 1. 添加[Arm64](https://so.csdn.net/so/search?q=Arm64&spm=1001.2101.3001.7020)的编译环境（构建套件Kits）
 
