--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -2,11 +2,11 @@
 
 Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 
+下载QT开发环境相关软件包
 
+网盘这个目录下的都要下载
 
-下载QT Creator
-
-下载QT源码
+h618_data\3-SoftwareData软件资料\Qt_environment_installation
 
 ## 安装QT
 
@@ -14,13 +14,19 @@ Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 
 ![image-20250305160406754](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160406754.png)
 
+建议断网安装，否则需要登录
+
 ![image-20250305154700903](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154700903.png)
 
 ![image-20250305154721393](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154721393.png)
 
 ![image-20250305154733307](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154733307.png)
 
+如下图选择工具
+
 ![image-20250305184749897](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305184749897.png)
+
+同意相关条款
 
 ![image-20250305154947584](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305154947584.png)
 
@@ -50,7 +56,7 @@ Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 
 ![image-20250305160301502](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160301502.png)
 
-完成后打开系统powershell
+完成后打开系统powershell执行以下
 
 ``` cmd
 state checkout ActiveState-Projects/ActiveState-Perl-5.36.0 .
@@ -78,11 +84,11 @@ state use ActiveState-Perl-5.36.0
 
 ![image-20250305161614854](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305161614854.png)
 
-添加环境变量
+根据安装目录添加环境变量
 
 ![image-20250305192154980](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305192154980.png)
 
-检查
+检查版本
 
 ![image-20250305162520633](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305162520633.png)
 
@@ -204,3 +210,15 @@ mingw32-make install
 ![image-20250306095752717](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095752717.png)
 
 ![image-20250306095859812](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095859812.png)
+
+编译通过
+
+![image-20250306135646187](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135646187.png)
+
+运行
+
+将编译生成的bin文件推送到板卡运行
+
+![image-20250306135749415](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135749415.png)
+
+![5bd2329f002770c72243028072b4b9a5](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/5bd2329f002770c72243028072b4b9a5.jpg)
