--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -175,7 +175,7 @@ mingw32-make install
 
 与我截图保持一致，点击右下角apply
 
-1. 配置Debuggers（个人感觉不重要，可省略）
+1. 配置Debuggers
 
 在“Debuggers”点击右边Add添加，选择gnu工具下的aarch64-linux\bin路径下的aarch64-linux-gnu-gdb.exe，Name修改为aarch64-linux-gnu-gdb，点击右下角apply
 
