--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -187,7 +187,7 @@ mingw32-make install
 
 ![image-20250306135029163](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135029163.png)
 
-1. 添加[Arm64](https://so.csdn.net/so/search?q=Arm64&spm=1001.2101.3001.7020)的编译环境（构建套件Kits）
+1. 添加Arm64的编译环境（构建套件Kits）
 
 在“Kits”栏点击添加，所有需要操作的部分参考下图红圈部分
 
